--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
     networks:
       - my-network
-
+#  curl http://servera:4000
   servera:
     build:
       context: .
