load balancer by weight

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,14 +2,20 @@ events {
   worker_connections 1024;
 }
 
+# round robin algo
+# http {
+#   upstream backend_servers {
+#     server servera:4000;
+#     # You can uncomment these lines when needed
+#     server serverb:5000;
+#     server serverc:4200;
+#   }
 http {
   upstream backend_servers {
     server servera:4000;
-    # You can uncomment these lines when needed
-    server serverb:5000;
+    server serverb:5000 weight=5;
     server serverc:4200;
   }
-
   server {
     listen 80;
 
