load balancer backup

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
   upstream backend_servers {
     server servera:4000;
     server serverb:5000 weight=5;
-    server serverc:4200;
+    server serverc:4200 backup;
   }
   server {
     listen 80;
