--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,10 @@ events {
 }
 
 http {
+    gzip on;
+    gzip_comp_level 6;
+    gzip_vary on;
+    gzip_types text/plain text/css application/json application/x-javascript application/javascript text/xml application/xml application/rss+xml text/javascript image/svg+xml application/vnd.ms-fontobject application/x-font-ttf font/opentype;
     proxy_cache_path /nginx_cache levels=1:2 keys_zone=my_cache:10m max_size=50m inactive=60m use_temp_path=off;
     
     log_format customz '$request $upstream_cache_status';
@@ -17,7 +21,6 @@ http {
         server serverb:5000 weight=5;
         server serverc:4200 backup;
     }
-
     server {
         listen 80;
         listen 443 ssl;
