adding changes for image ong docker

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,10 +7,13 @@ http {
     gzip_comp_level 6;
     gzip_vary on;
     gzip_types text/plain text/css application/json application/x-javascript application/javascript text/xml application/xml application/rss+xml text/javascript image/svg+xml application/vnd.ms-fontobject application/x-font-ttf font/opentype;
+
+    # Define cache path for both general and image caching
     proxy_cache_path /nginx_cache levels=1:2 keys_zone=my_cache:10m max_size=50m inactive=60m use_temp_path=off;
-    
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=image_cache:10m max_size=100m inactive=24h use_temp_path=off;
+
     log_format customz '$request $upstream_cache_status';
-    
+
     split_clients "${time_iso8601}" $a_or_b {
         50% siteA;
         50% siteB;
@@ -24,7 +27,7 @@ http {
     server {
         listen 80;
         listen 443 ssl;
-        
+
         ssl_certificate /certs/cert.pem;
         ssl_certificate_key /certs/key.pem;
 
@@ -46,19 +49,31 @@ http {
             proxy_http_version 1.1; 
             proxy_set_header Connection ""; 
 
-            # Forward client details to backend
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
             # Enable caching
-            proxy_cache my_cache;                    # Use the defined cache zone
-            proxy_cache_valid 200 302 304 10m;           # Cache 200 and 302 responses for 10 minutes
-            proxy_cache_valid 404 1m;                # Cache 404 responses for 1 minute
-            proxy_cache_min_uses 1;                  # Cache after 1 use
-            add_header X-Cache-Status $upstream_cache_status;  # Add cache status in response header
+            proxy_cache my_cache;                    
+            proxy_cache_valid 200 302 304 10m;       
+            proxy_cache_valid 404 1m;                
+            proxy_cache_min_uses 1;                  
+            add_header X-Cache-Status $upstream_cache_status;
         }
+
+        # Add image caching for .jpg, .png, .gif
+        location ~* \.(jpg|jpeg|png|gif|svg)$ {
+            proxy_pass http://backend_servers;      # Forward to the backend
+            proxy_cache image_cache;                # Use the image cache
+            proxy_cache_valid 200 302 24h;          # Cache successful responses for 24 hours
+            proxy_cache_valid 404 1m;               # Cache 404 responses for 1 minute
+            expires 24h;                            # Set browser cache expiry for 24 hours
+
+            add_header X-Cache-Status $upstream_cache_status;
+            add_header Cache-Control "public, max-age=86400"; # Control browser cache
+        }
+
         # Serve a simple index page at the root
         location / {
             return 200 "Welcome to Nginx proxy server.\n";
