--- a/nginx.conf
+++ b/nginx.conf
@@ -27,6 +27,7 @@ http {
     server {
         listen 80;
         listen 443 ssl;
+        http2 on;
 
         ssl_certificate /certs/cert.pem;
         ssl_certificate_key /certs/key.pem;
