update http2 and compose version

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,19 +18,24 @@ http {
         50% siteA;
         50% siteB;
     }
-
+#  upstream backend_servers {
+#         server servera:4000;
+#         server serverb:5000 weight=5;
+#         server serverc:4200 backup;
+#     }
     upstream backend_servers {
         server servera:4000;
-        server serverb:5000 weight=5;
-        server serverc:4200 backup;
+        server serverb:5000;
+        server serverc:4200;
     }
+
     server {
         listen 80;
-        listen 443 ssl;
-        http2 on;
+        # listen 443 ssl;
+        # http2 on;
 
-        ssl_certificate /certs/cert.pem;
-        ssl_certificate_key /certs/key.pem;
+        # ssl_certificate /certs/cert.pem;
+        # ssl_certificate_key /certs/key.pem;
 
         location /site {
             return 301 /$a_or_b;
@@ -45,23 +50,29 @@ http {
         }
 
         # Route all /users/ requests to the upstream servers
-        location /users/ {
-            proxy_pass http://backend_servers; 
-            proxy_http_version 1.1; 
-            proxy_set_header Connection ""; 
+       location /api/ {
+        proxy_pass http://backend_servers;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        # Caching
+        proxy_cache my_cache;
+        proxy_cache_valid 200 302 304 10m;
+        proxy_cache_valid 404 1m;
+        proxy_cache_min_uses 1;
 
-            # Enable caching
-            proxy_cache my_cache;                    
-            proxy_cache_valid 200 302 304 10m;       
-            proxy_cache_valid 404 1m;                
-            proxy_cache_min_uses 1;                  
-            add_header X-Cache-Status $upstream_cache_status;
+        # CORS
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Origin, X-Requested-With' always;
+
+        if ($request_method = OPTIONS) {
+            return 204;
         }
+}
 
         # Add image caching for .jpg, .png, .gif
         location ~* \.(jpg|jpeg|png|gif|svg)$ {
@@ -76,9 +87,8 @@ http {
         }
 
         # Serve a simple index page at the root
-        location / {
-            return 200 "Welcome to Nginx proxy server.\n";
-            add_header Content-Type text/plain;
-        }
+         location / {
+          root /usr/share/nginx/html;
+          }
     }
 }
